--- a/css/styles.css
+++ b/css/styles.css
@@ -190,6 +190,25 @@ p {
 
 /* Showreel */
 
+.showreel-container {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 56.25%;
+  margin: auto;
+}
+
+.youtube-showreel {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  /* padding: 5%; */
+}
+
 /* Links */
 
 a {
