Define social media content.

--- a/css/styles.css
+++ b/css/styles.css
@@ -275,12 +275,25 @@ ul {
   text-align: center;
 }
 
+.social-media {
+  display: flex;
+  padding: 3rem;
+  justify-content: space-around;
+  align-items: center;
+  align-content: center;
+}
+
 
 /* Icons */
 .icon {
   width: 40px;
   height: 40px;
   color: var(--color-accent); 
+}
+
+.social-media__icon{
+  font-size: 5rem;
+width:100%
 }
 
 
